menu done, styles separated

--- a/menu.html
+++ b/menu.html
@@ -1,100 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link rel="stylesheet" href="styles_menu.css" />
     <title>Menu</title>
-</head>
-<body>
-    <div class="menu-inner">
-        <div class="header menu-header">
-            <div class="header__inner menu-header__inner">
-                <button class="header__burger menu-header__burger">
-                    <img src="images/burger_close.svg" alt="return">
-                </button>
-                <a class="header__link-logo menu-header__link-logo" href="#">
-                    <img class="header__img-logo" src="images/logo.svg" alt="logo">
-                </a>
-                <button class="menu-header__search">
-                    <img src="images/search.svg" alt="search">
-                </button>
-            </div>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="top">
+        <div class="top__inner">
+          <button type="button" class="top__burger">
+            <img src="images/burger_close.svg" alt="return" />
+          </button>
+          <a class="top__logo" href="#">
+            <img src="images/logo.svg" alt="logo" />
+          </a>
+          <button type="button" class="top__search">
+            <img src="images/search.svg" alt="search" />
+          </button>
         </div>
-        <ul class="menu-actions">
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link menu-actions__link--active">
-                    Ремонт техники
-                </a>
+      </div>
+      <div class="nav">
+        <div class="nav__inner">
+          <ul class="nav__actions">
+            <li class="nav__action">
+              <a href="#" class="nav__link nav__link--active">
+                Ремонт техники
+              </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link">
-                    Услуги и сервисы
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Услуги и сервисы </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link">
-                    Корпоративным клиентам
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Корпоративным клиентам </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link">
-                    Продавцам техники
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Продавцам техники </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link">
-                    Партнерам
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Партнерам </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link ">
-                    Производителям
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Производителям </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link">
-                    Наши сервисные центры
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Наши сервисные центры </a>
             </li>
-            <li class="menu-actions__action">
-                <a href="#" class="menu-actions__link">
-                    Контакты
-                </a>
+            <li class="nav__action">
+              <a href="#" class="nav__link"> Контакты </a>
             </li>
-        </ul>
-        <div class="menu-footer">
-            <div class="menu-footer__inner">
-                <div class="menu-footer__actions">
-                    <button class="menu-footer__action-button">
-                        <img src="images/call.svg" alt="call">
-                    </button>
-                    <button class="menu-footer__action-button">
-                        <img src="images/chat.svg" alt="chat">
-                    </button>
-                    <button class="menu-footer__action-button">
-                        <img src="images/profile.svg" alt="profile">
-                    </button>
-                </div>
-                <div class="menu-footer__email">
-                    mail@cps.com
-                </div>
-                <div class="menu-footer__phone">
-                    8 800 890 8900
-                </div>
-                <div class="menu-footer__langs">
-                    <button class="menu-footer__lang-button">
-                        RU
-                    </button>
-                    <button class="menu-footer__lang-button">
-                        EN
-                    </button>
-                    <button class="menu-footer__lang-button">
-                        CH
-                    </button>
-                </div>
-            </div>
+          </ul>
         </div>
+      </div>
+      <div class="bottom">
+        <div class="bottom__inner">
+          <div class="bottom__actions">
+            <button class="bottom__action">
+              <img src="images/call.svg" alt="call" />
+            </button>
+            <button class="bottom__action">
+              <img src="images/chat.svg" alt="chat" />
+            </button>
+            <button class="bottom__action">
+              <img src="images/profile.svg" alt="profile" />
+            </button>
+          </div>
+          <div class="bottom__email">mail@cps.com</div>
+          <div class="bottom__phone">8 800 890 8900</div>
+          <div class="bottom__langs">
+            <label class="bottom__lang">
+              <input
+                type="radio"
+                name="lang"
+                value="ru"
+                cheked
+                class="bottom__btn-lang"
+              />RU
+            </label>
+            <label class="bottom__lang">
+              <input
+                type="radio"
+                name="lang"
+                value="en"
+                class="bottom__btn-lang"
+              />EN
+            </label>
+            <label class="bottom__lang">
+              <input
+                type="radio"
+                name="lang"
+                value="ch"
+                class="bottom__btn-lang"
+              />CH
+            </label>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
